Fix visible scrollbars when no scroll is possible.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,7 @@
     &__content {
         flex: 1;
         height: inherit;
-        overflow: scroll;
+        overflow: auto;
         padding: 25px 24px;
     }
 }
